# StarkNet-NFT-Template

./: .ci.env  .example.env  .gitignore  LICENSE  README.md  hardhat.config.js  hardhat.config.ts  mintDetails.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: ci.yml
contracts/: nft_contract.cairo
scripts/: createAccount.js  createAccount.ts  deployNFT.js  deployNFT.ts  grantBurnerRole.js  grantBurnerRole.ts  grantMinterRole.js  grantMinterRole.ts  mintNFTs.js  mintNFTs.ts  setMetadata.js  setMetadata.ts  utils.js
scripts/utils/: getAccount.ts
src/: createAccount.ts  deployNFT.ts  grantBurnerRole.ts  grantMinterRole.ts  mintNFTs.ts  setMetadata.ts  utils.ts
src/utils/: getAccount.ts
test/: e2e.ts
