[tool.poetry]
name = "starknet-nft-template"
version = "0.3.0"
description = "An easy to use template for deploying and using NFTs on StarkNet"
authors = ["0xZorz"]
license = "Apache-2.0"
repository = "https://github.com/rzmahmood/StarkNet-NFT-Template"
readme = "README.md"
keywords = ["starknet", "immutablex", "cairo", "nft", "template"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
cairo-lang = "^0.10.2"
immutablex-starknet = "0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
